[project]
name = "cython_vst_loader"
dynamic = ["version"]
#version = "0.4.0"
description = "A cython-based loader for VST audio plugins providing a clean python object-oriented interface"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ['vst', 'plugin', 'cython']
authors = [{ name = "Sergey Grechin", email = "grechin.sergey@gmail.com" }]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    #'Programming Language :: Python :: 3.7',
    #'Programming Language :: Python :: 3.8',
    #'Programming Language :: Python :: 3.9'
]

dependencies = ["numpy"]



[project.urls]
"Homepage" = "https://github.com/hq9000/cython-vst-loader"

[build-system]
requires = ["setuptools>=61.0", "Cython", "build", "setuptools_scm"]
build-backend = "setuptools.build_meta"





[tool.setuptools.packages.find]
exclude = ["include"]
namespaces = false


[tool.setuptools_scm]
